<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_backdrop_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/details_movie_backdrop_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_placeholder" />

    <ImageView
        android:id="@+id/iv_detail_image"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/details_movie_poster_description"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_backdrop_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_backdrop_image"
        app:srcCompat="@drawable/poster_placeholder" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/details_title_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_image"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_backdrop_image"
        tools:text="@string/details_movie_title" />

    <ImageButton
        android:id="@+id/btn_detail_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/details_movie_favorite_button_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_backdrop_image"
        app:srcCompat="@drawable/ic_bookmark_border_accent_24dp" />

    <TextView
        android:id="@+id/tv_detail_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_image"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
        tools:text="@string/details_movie_release_date" />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

    <RatingBar
        android:id="@+id/rb_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:stepSize="0.01"
        android:numStars="10"
        style="?android:attr/ratingBarStyleIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTop" />

    <View
        android:id="@+id/dividerBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_detail_rating" />

    <TextView
        android:id="@+id/tv_detail_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryText"
        tools:text="@string/details_movie_synopsis"
        app:layout_constraintTop_toBottomOf="@+id/dividerBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_trailer_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_back_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp"
        app:fabSize="normal" />

</android.support.constraint.ConstraintLayout>